# polymarket

./: .env.example  .gitignore  .vercelignore  README.md  backtest.py  paper_runner.py  pyproject.toml  requirements.txt  run.py  sample.json  strategy.py  vercel.json  wrangler.jsonc
app/: __init__.py  db.py  logger.py  models.py  settings.py
app/core/: __init__.py  autonomous_decider.py  bankroll.py  copier.py  decision_engine.py  event_bus.py  execution_engine.py  feature_engine.py  incubation_policy.py  (+19 more)
config/: settings.yaml  strategy_registry.yaml
tests/: test_autonomous_decider.py  test_backtest_kpis.py  test_btc5m_strategy.py  test_clob_client_balance.py  test_dashboard_summary.py  test_decision_engine.py  test_discovery.py  test_event_bus.py  test_execute_copy_error_handling.py  test_execute_copy_live_scope.py  test_execution_engine.py  test_experiment_runner.py  test_feature_engine.py  test_fee_model.py  test_gamma_client.py  test_historical_dataset_builder.py  test_liquidation_feed.py  test_live_broker.py  test_live_wallet_sync.py  test_manual_approval.py  test_market_classifier.py  test_market_expiry.py  test_market_feed.py  test_normalizer.py  test_polymarket_fee_model.py  test_profit_policy.py  test_rebalance.py  test_replay_engine.py  test_report.py  test_risk.py  test_run_runtime_session.py  test_runtime_diagnostics.py  test_sizing.py  test_slippage_model.py  test_spot_feed.py  test_storage_rotation.py  test_strategy_registry.py  test_telegram_status_summary.py  test_telegram_trade_notifier.py  test_tracker.py  (+4 more)
web/: app.js  index.html  styles.css
(+33 files in other folders)
